--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asyncpg==0.30.0
 annotated-types==0.7.0
 anyio==4.11.0
 click==8.3.0
@@ -5,6 +6,7 @@ colorama==0.4.6
 fastapi==0.118.0
 h11==0.16.0
 idna==3.10
+psycopg2-binary==2.9.9
 pydantic==2.11.9
 pydantic_core==2.33.2
 sniffio==1.3.1
