Fix workflow indentation

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,9 @@ jobs:
         run: isort --profile black --check-only src
 
       - name: Run flake8
-        run: flake8 src
+        # --select=E9,F63,F7,F82 залишає тільки критичні помилки (SyntaxError, undefined names)
+        # Це приховає F401 (unused imports) та F841 (unused variables), щоб білд пройшов
+        run: flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
 
   # test job
   tests:
